Revert "Merge branch 'test_ilias' into 'advanced'"
This reverts commit d949c050c03dce9b6a70ab26db44cfcdb710c1f6